# eml_analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  app.Dockerfile  app.json  circus.ini  docker-compose.yml  gunicorn.conf.py  heroku.yml  hoge.txt  lefthook.yml  pyproject.toml  pytest.ini  renovate.json  requirements.txt  supervisord.conf  test.docker-compose.yml
.github/workflows/: deploy.yml  node.yml  python.yml  test.yml
app/: __init__.py
app/api/: api.py
app/api/endpoints/: analyze.py  submit.py
app/core/: resources.py  settings.py  utils.py
app/factories/: emailrep.py  eml.py  inquest.py  oldid.py  response.py  spamassassin.py  urlscan.py  verdicts.py  virustotal.py
app/schemas/: emailrep.py  eml.py  payload.py  response.py  submission.py  verdict.py
app/services/: emailrep.py  extractor.py  inquest.py  oleid.py  outlookmsgfile.py  spamassassin.py  urlscan.py  validator.py
app/submitters/: abstract.py  inquest.py  virustotal.py
backend/: __init__.py  dependencies.py  deps.py  main.py  oleid.py  outlookmsgfile.py  outlookmsgfile_wrapper.py  settings.py  types.py  utils.py  validator.py
backend/api/: api.py
backend/api/endpoints/: analyze.py  cache.py  lookup.py  status.py  submit.py
backend/clients/: __init__.py  emailrep.py  inquest.py  spamassasin.py  urlscan.py
backend/core/: datastructures.py  settings.py  utils.py
backend/factories/: __init__.py  abstract.py  dkim_.py  emailrep.py  eml.py  inquest.py  oldid.py  response.py  spamassassin.py  urlscan.py  virustotal.py
backend/monkeypatch/: __init__.py  rtfparser_patch.py
backend/schemas/: __init__.py  api_model.py  emailrep.py  eml.py  inquest.py  payload.py  response.py  spamassasin.py  status.py  submission.py  urlscan.py  verdict.py
backend/services/: emailrep.py  extractor.py  inquest.py  oleid.py  spamassassin.py  urlscan.py
backend/submitters/: abstract.py  inquest.py  virustotal.py
frontend/: .eslintrc.cjs  .eslintrc.js  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.vitest.json  tsconfig.vitest.tsbuildinfo  vite.config.ts  vitest.config.ts  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  api.ts  constants.ts  main.ts  schemas.ts  store.ts  style.css  types.ts  utils.ts
frontend/src/components/: Cache.vue  CacheItem.vue  DividerItem.vue  Eml.vue  EmlItem.vue  ErrorMessage.vue  IndicatorButton.vue  Loading.vue  LoadingItem.vue  Lookup.vue  LookupItem.vue  Navbar.vue  NavbarItem.vue  Response.vue  ResponseItem.vue  StatusTags.vue  Upload.vue  UploadItem.vue
frontend/src/components/attachments/: Attachment.vue  AttachmentDownloadButton.vue  AttachmentItem.vue  AttachmentSubmissionButton.vue  AttachmentSubmissionNotification.vue  Attachments.vue  AttachmentsItem.vue
frontend/src/components/bodies/: Bodies.vue  BodiesItem.vue  Body.vue  BodyItem.vue  Content.vue  ContentItem.vue
frontend/src/components/hashes/: Hashes.vue
frontend/src/components/headers/: BasicHeaders.vue  FlattenHeaders.vue  Headers.vue  HeadersItem.vue  Hops.vue  HopsItem.vue  OtherHeaders.vue  SecurityHeaders.vue  XHeaders.vue
frontend/src/components/indicators/: Indicators.vue
frontend/src/components/links/: Link.vue  Links.vue
frontend/src/components/mixins/: error_dialog.ts
frontend/src/components/submitters/: Submitter.vue  Submitters.vue
frontend/src/components/ui/: DatetimeWithDiff.vue  Navbar.vue  UTC.vue  h2.vue  h3.vue
frontend/src/components/verdicts/: Detail.vue  DetailItem.vue  Verdict.vue  VerdictItem.vue  Verdicts.vue  VerdictsItem.vue
frontend/src/composables/: useStatus.ts
frontend/src/links/: abuseipdb.ts  anyrun.ts  browserling.ts  crtsh.ts  domaintools.ts  emailrep.ts  hybridanalysis.ts  index.ts  inquest.ts  securitytrails.ts  shodan.ts  urlscan.ts  virustotal.ts  whois.ts
frontend/src/router/: index.ts
frontend/src/submitters/: index.ts  inquest.ts  virustotal.ts
frontend/src/utils/: alert.ts  base64.ts  commaSeparated.ts  comma_separated.ts  secondsToHumanize.ts  seconds_to_humanize.ts  urlBuilder.ts
frontend/src/views/: Cache.vue  CacheView.vue  Home.vue  HomeView.vue  Lookup.vue  LookupView.vue
frontend/tests/unit/: example.spec.ts  fixtures.ts  utils.spec.ts  utils_spec.ts
frontend/tests/unit/links/: abuseipdb.spec.ts  anyrun.spec.ts  browserling.spec.ts  crtsh.spec.ts  domaintools.spec.ts  emailrep.spec.ts  hybridanalysis.spec.ts  inquest.spec.ts  securitytrails.spec.ts  shodan.spec.ts  urlscan.spec.ts  virustotal.spec.ts  whois.spec.ts
frontend/tests/unit/utils/: comma_separated.spec.ts  seconds_to_humanize.spec.ts
frontend/vite-project/: package.json
frontend/vite-project/src/: main.ts
scripts/: ping.py
tests/: conftest.py  test_utils.py
tests/api/endpoints/: test_analyze.py  test_submit.py
tests/factories/: test_dkim.py  test_emailrep.py  test_eml.py  test_inquest.py  test_oleid.py  test_spamassassin.py  test_urlscan.py  test_virustotal.py
tests/fixtures/: cc.eml  content_id.eml  emailrep.json  encrypted_docx.eml  inquest_dfi_details.json  inquest_dfi_upload.json  invalid_datetime.eml  macro.xls  multipart.eml  other.msg  outer.msg  sa.txt  sample.eml  test.html  urlscan_result.json  urlscan_search.json
tests/fixtures/emails/attachment_emails/: attachment_message_rfc822.eml
tests/fixtures/emails/dkim/: invalid.eml  no_signature.eml  valid.eml
tests/fixtures/vcr_cassettes/: inquest.yaml  urlscan.yaml  vt.yaml  vt_non_malicious.yaml
tests/schemas/: test_payload.py
tests/services/: test_emailrep.py  test_extractor.py  test_inquest.py  test_oleid.py  test_outlookmsgfile.py  test_urlscan.py
tests/submitters/: test_inquest.py  test_virustotal.py
(+5 files in other folders)
