[tool.poetry]
name = "eml_analyzer"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
aiometer = "^0.5"
aiospamc = "^1.0"
async-timeout = "^4.0.3"
beautifulsoup4 = "^4.12.3"
circus = "^0.18"
compoundfiles = "^0.3"
compressed-rtf = "^1.0.6"
dateparser = "^1.2"
eml_parser = { extras = ["filemagic"], version = "^1.17.5" }
fastapi = "^0.110"
gunicorn = "^22.0.0"
html2text = "^2024.2.26"
httpx = "^0.27"
ioc-finder = "^6.0"
loguru = "^0.7.2"
oletools = "0.60.1"
pydantic = "^2.7.1"
pyhumps = "^3.8"
python-magic = "^0.4.27"
python-multipart = "^0.0.9"
redis = "^5.0.4"
returns = { extras = ["compatible-mypy"], version = "^0.22" }
stamina = "^24.2"
uvicorn = "^0.29.0"
vt-py = "^0.18.2"

[tool.poetry.group.dev.dependencies]
ci-py = "^1.0"
coveralls = "^3.3"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-docker = "^3.1.1"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-pretty = "^1.2"
pytest-randomly = "^3.15"
pytest-timeout = "^2.3.1"
pyupgrade = "^3.15.2"
ruff = "^0.4.5"
syncer = "^2.0.3"
vcrpy = "^6.0.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C",     # flake8-comprehensions
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "SIM",   # flake8-simplify
  "T20",   # flake8-print
  "W",     # pycodestyle warnings
]
ignore = [
  "E501", # line too long
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy", "returns.contrib.mypy.returns_plugin"]
