[project]
name = "eml-analyzer"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Manabu Niseki", email = "manabu.niseki@gmail.com" }]
dependencies = [
  "aiofiles>=24.1.0",
  "aiometer>=0.5,<0.6",
  "aiospamc>=1.1.1",
  "async-timeout>=5.0.1",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "circus>=0.18,<0.19",
  "compoundfiles>=0.3,<0.4",
  "compressed-rtf>=1.0.6,<2.0.0",
  "dateparser>=1.2,<2.0",
  "eml_parser[filemagic]>=2.0.0",
  "fastapi>=0.115.7",
  "gunicorn>=23.0.0",
  "html2text>=2024.2.26,<2025.0.0",
  "httpx>=0.28.1",
  "ioc-finder>=7.3.0,<8.0.0",
  "loguru>=0.7.3",
  "oletools==0.60.2",
  "pydantic>=2.10.6",
  "pyhumps>=3.8,<4.0",
  "python-magic>=0.4.27,<0.5.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "returns[compatible-mypy]>=0.24.0",
  "stamina>=24.3.0",
  "uvicorn>=0.34.0",
  "vt-py>=0.19.0",
]

[dependency-groups]
dev = [
  "ci-py>=1.0,<2.0",
  "coveralls>=4.0.1,<5.0.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.23.7,<0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-docker>=3.1.1,<4.0.0",
  "pytest-env>=1.1.5",
  "pytest-mock>=3.14.0,<4.0.0",
  "pytest-pretty>=1.2,<2.0",
  "pytest-randomly>=3.16.0",
  "pytest-timeout>=2.3.1,<3.0.0",
  "ruff>=0.9.3",
  "syncer>=2.0.3,<3.0.0",
  "uv-sort>=0.4.0",
  "vcrpy>=7.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C",     # flake8-comprehensions
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "SIM",   # flake8-simplify
  "T20",   # flake8-print
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
ignore = [
  "E501", # line too long
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy", "returns.contrib.mypy.returns_plugin"]
