[project]
name = "eml-analyzer"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "Manabu Niseki", email = "manabu.niseki@gmail.com" }]
dependencies = [
  "aiofiles>=25.1.0",
  "aiometer>=1.0.0",
  "aiospamc>=1.2.0",
  "async-timeout>=5.0.1",
  "beautifulsoup4>=4.14.3",
  "circus>=0.19.0",
  "compoundfiles>=0.3,<0.4",
  "compressed-rtf>=1.0.7",
  "convert-outlook-msg-file",
  "dateparser>=1.2.2",
  "eml_parser[filemagic]>=2.0.0",
  "fastapi>=0.127.0",
  "gunicorn>=23.0.0",
  "html2text>=2025.4.15",
  "httpx>=0.28.1",
  "ioc-finder>=7.3.0,<8.0.0",
  "loguru>=0.7.3",
  "oletools==0.60.2",
  "pydantic>=2.12.5",
  "python-magic>=0.4.27,<0.5.0",
  "python-multipart>=0.0.21",
  "redis>=6.2.0",
  "secweb>=1.25.2",
  "stamina>=25.2.0",
  "uvicorn-worker>=0.4.0",
  "uvicorn>=0.40.0",
  "vt-py>=0.22.0",
]

[dependency-groups]
dev = [
  "ci-py>=1.0,<2.0",
  "coveralls>=4.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-docker>=3.2.5",
  "pytest-env>=1.2.0",
  "pytest-mock>=3.15.1",
  "pytest-pretty>=1.3.0",
  "pytest-randomly>=4.0.1",
  "pytest-timeout>=2.4.0",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
  "syncer>=2.0.3,<3.0.0",
  "vcrpy>=8.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
convert-outlook-msg-file = { git = "https://github.com/JoshData/convert-outlook-msg-file" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C",     # flake8-comprehensions
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "SIM",   # flake8-simplify
  "T20",   # flake8-print
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
ignore = [
  "E501", # line too long
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
